Change brand name style + cleanup

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -5,3 +5,7 @@
 .mdxeditor-toolbar {
   @apply !rounded-b-none !rounded-tl-sm !rounded-tr-sm;
 }
+
+.mdxeditor-popup-container {
+  @apply !shadow-none !border-0;
+}
