--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -4,98 +4,201 @@
 @tailwind components;
 @tailwind utilities;
 
-/* DESCRIPTION EDITOR */
+/* SELECT CARETS */
 
-.description-editor a {
+@media (prefers-color-scheme: light) {
+  .custom-caret-color {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23451a03' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .custom-caret-color {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+  }
+}
+
+/* DESCRIPTION RELATED */
+
+.prose a {
   overflow-wrap: anywhere;
 }
 .mdxeditor-toolbar {
-  @apply rounded-b-none rounded-tl-sm rounded-tr-sm !important;
+  @apply rounded-b-none rounded-tl-sm rounded-tr-sm bg-stone-100 dark:bg-stone-400 !important;
 }
 .mdxeditor-popup-container {
   @apply border-0 shadow-none !important;
 }
+.mdxeditor-rich-text-editor > div > div {
+  @apply text-amber-950 dark:text-white !important;
+}
+.mdxeditor-rich-text-editor > div > div a {
+  @apply text-amber-600 !important;
+}
 
 /* NPROGRESS */
 
-#nprogress {
-  pointer-events: none;
-}
-#nprogress .bar {
-  background: #d97706;
-  position: fixed;
-  z-index: 1031;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 0.333rem;
-}
-body.overflow-hidden #nprogress .bar {
-  background: #fffbeb;
-}
-#nprogress .peg {
-  display: block;
-  position: absolute;
-  right: 0px;
-  width: 100px;
-  height: 100%;
-  box-shadow:
-    0 0 0.999rem #d97706,
-    0 0 0.666rem #d97706;
-  opacity: 1;
-  transform: rotate(3deg) translate(0px, -0.666rem);
-  transition: all 200ms linear;
-}
-body.overflow-hidden #nprogress .peg {
-  box-shadow:
-    0 0 1.25rem #fffbeb,
-    0 0 0.625rem #fffbeb;
-}
-#nprogress .spinner {
-  display: block;
-  position: fixed;
-  z-index: 1031;
-  bottom: 0.5rem;
-  right: 0.5rem;
-}
-#nprogress .spinner-icon {
-  width: 1.222rem;
-  height: 1.222rem;
-  box-sizing: border-box;
-  border: solid 0.333rem transparent;
-  border-top-color: #d97706;
-  border-left-color: #d97706;
-  border-radius: 50%;
-  animation: nprogress-spinner 500ms linear infinite;
-  transition: all 200ms linear;
-}
-@media (min-width: 640px) {
+@media (prefers-color-scheme: light) {
+  #nprogress {
+    pointer-events: none;
+  }
+  #nprogress .bar {
+    background: #d97706;
+    position: fixed;
+    z-index: 1031;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0.333rem;
+  }
+  body.overflow-hidden #nprogress .bar {
+    background: #fffbeb;
+  }
+  #nprogress .peg {
+    display: block;
+    position: absolute;
+    right: 0px;
+    width: 100px;
+    height: 100%;
+    box-shadow:
+      0 0 0.999rem #d97706,
+      0 0 0.666rem #d97706;
+    opacity: 1;
+    transform: rotate(3deg) translate(0px, -0.666rem);
+    transition: all 200ms linear;
+  }
+  body.overflow-hidden #nprogress .peg {
+    box-shadow:
+      0 0 1.25rem #fffbeb,
+      0 0 0.625rem #fffbeb;
+  }
+  #nprogress .spinner {
+    display: block;
+    position: fixed;
+    z-index: 1031;
+    bottom: 0.5rem;
+    right: 0.5rem;
+  }
   #nprogress .spinner-icon {
-    width: 1.777rem;
-    height: 1.777rem;
+    width: 1.222rem;
+    height: 1.222rem;
+    box-sizing: border-box;
     border: solid 0.333rem transparent;
     border-top-color: #d97706;
     border-left-color: #d97706;
+    border-radius: 50%;
+    animation: nprogress-spinner 500ms linear infinite;
+    transition: all 200ms linear;
+  }
+  @media (min-width: 640px) {
+    #nprogress .spinner-icon {
+      width: 1.777rem;
+      height: 1.777rem;
+      border: solid 0.333rem transparent;
+      border-top-color: #d97706;
+      border-left-color: #d97706;
+    }
+  }
+  body.overflow-hidden #nprogress .spinner-icon {
+    border-top-color: #fffbeb;
+    border-left-color: #fffbeb;
+  }
+  .nprogress-custom-parent {
+    overflow: hidden;
+    position: relative;
+  }
+  .nprogress-custom-parent #nprogress .spinner,
+  .nprogress-custom-parent #nprogress .bar {
+    position: absolute;
+  }
+  @keyframes nprogress-spinner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
-body.overflow-hidden #nprogress .spinner-icon {
-  border-top-color: #fffbeb;
-  border-left-color: #fffbeb;
-}
-.nprogress-custom-parent {
-  overflow: hidden;
-  position: relative;
-}
-.nprogress-custom-parent #nprogress .spinner,
-.nprogress-custom-parent #nprogress .bar {
-  position: absolute;
-}
-@keyframes nprogress-spinner {
-  0% {
-    transform: rotate(0deg);
+@media (prefers-color-scheme: dark) {
+  #nprogress {
+    pointer-events: none;
   }
-  100% {
-    transform: rotate(360deg);
+  #nprogress .bar {
+    background: #fffbeb;
+    position: fixed;
+    z-index: 1031;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0.333rem;
+  }
+  body.overflow-hidden #nprogress .bar {
+    background: #d97706;
+  }
+  #nprogress .peg {
+    display: block;
+    position: absolute;
+    right: 0px;
+    width: 100px;
+    height: 100%;
+    box-shadow:
+      0 0 0.999rem #fffbeb,
+      0 0 0.666rem #fffbeb;
+    opacity: 1;
+    transform: rotate(3deg) translate(0px, -0.666rem);
+    transition: all 200ms linear;
+  }
+  body.overflow-hidden #nprogress .peg {
+    box-shadow:
+      0 0 1.25rem #d97706,
+      0 0 0.625rem #d97706;
+  }
+  #nprogress .spinner {
+    display: block;
+    position: fixed;
+    z-index: 1031;
+    bottom: 0.5rem;
+    right: 0.5rem;
+  }
+  #nprogress .spinner-icon {
+    width: 1.222rem;
+    height: 1.222rem;
+    box-sizing: border-box;
+    border: solid 0.333rem transparent;
+    border-top-color: #fffbeb;
+    border-left-color: #fffbeb;
+    border-radius: 50%;
+    animation: nprogress-spinner 500ms linear infinite;
+    transition: all 200ms linear;
+  }
+  @media (min-width: 640px) {
+    #nprogress .spinner-icon {
+      width: 1.777rem;
+      height: 1.777rem;
+      border: solid 0.333rem transparent;
+      border-top-color: #fffbeb;
+      border-left-color: #fffbeb;
+    }
+  }
+  body.overflow-hidden #nprogress .spinner-icon {
+    border-top-color: #d97706;
+    border-left-color: #d97706;
+  }
+  .nprogress-custom-parent {
+    overflow: hidden;
+    position: relative;
+  }
+  .nprogress-custom-parent #nprogress .spinner,
+  .nprogress-custom-parent #nprogress .bar {
+    position: absolute;
+  }
+  @keyframes nprogress-spinner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
 
